--- a/games.html
+++ b/games.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="\style.css">
-    <link rel="icon" type="image/x-icon" href="\imagens/id/estrela.png">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="imagens/id/estrela.png">
     <title>Portfolio</title>
 
 </head>
 <body>
  
     <header class="menu">
-      <h2 class="home"><a href="\index.html">Home</a></h2>
+      <h2 class="home"><a href="index.html">Home</a></h2>
       <nav>
         <ul class="navegacao-menu">
           <li ><a href="sobre.html">sobre</a></li>
@@ -35,7 +35,7 @@
       <div class="coluna">
         
         <aside class="menu-lateral">
-          <figure><img src="\imagens/id/logo 1.png"></figure>
+          <figure><img src="imagens/id/logo 1.png"></figure>
           <container class="sobre">
             <nav class="nav-menu-lateral">
               <ul>
