--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="home"><a href="index.html">Home</a></h2>
       <nav>
         <ul class="navegacao-menu">
-          <li ><a href="/paginas/sobre.html">sobre</a></li>
+          <li ><a href="sobre.html">sobre</a></li>
         </ul>
       </nav>
     </header>
@@ -39,10 +39,10 @@
           <container class="sobre">
             <nav class="nav-menu-lateral">
           <ul>
-            <li><a href="/paginas/paginas.html">Páginas</a></li>
-            <li><a href="/paginas/personagens.html">Personagens</a></li>
-            <li><a href="/paginas/games.html">Games</a></li>
-            <li><a href="/paginas/estudos.html">Estudos</a></li>
+            <li><a href="paginas.html">Páginas</a></li>
+            <li><a href="personagens.html">Personagens</a></li>
+            <li><a href="games.html">Games</a></li>
+            <li><a href="estudos.html">Estudos</a></li>
           </ul>
         </nav>
           </container>
