--- a/sobre.html
+++ b/sobre.html
@@ -33,6 +33,23 @@
           padding-top: 5px;
           
         }
+        @media only screen and (max-width: 400px) {
+      .sobre{
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+      }
+      .menu-lateral>figure{
+        display: none;
+      }
+      .menu-lateral{
+        margin: auto;
+        display:flex;   
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+    }
     </style>
 </head>
 <body>
